fix youtube overlap &  gallery alignment

--- a/wp-content/themes/specialist_cosmetic_surgery/style.css
+++ b/wp-content/themes/specialist_cosmetic_surgery/style.css
@@ -1128,3 +1128,8 @@ div.wpcf7-mail-sent-ok { display: none !important; }
 }
 
 #access .sf-menu li ul.sub-menu { z-index: 99; }
+
+.ngg-gallery-thumbnail-box {
+    display: inline-block !important;
+    float: none !important;
+}
